# metaplex-program-library

./: .gitmodules  Anchor.toml  Cargo.toml
candy-machine/js/: .solitarc.js
candy-machine/js/idl/: candy_machine.json
candy-machine/program/: Cargo.toml
candy-machine/program/src/: constants.rs  errors.rs  lib.rs  state.rs  utils.rs
candy-machine/program/src/processor/: add_config_lines.rs  initialize.rs  mint.rs  update.rs
candy-machine/program/src/processor/collection/: mod.rs  remove_collection.rs  set_collection.rs  set_collection_during_mint.rs
token-metadata/program/: Cargo.toml
