[workspace]
members=[
  "auction/program",
  "metaplex/program",
  "token-entangler/program",
  "token-vault/program",
  "token-vault/test",
  "nft-packs/program",
  "fixed-price-sale/program",
  "candy-machine/program"
]
exclude = [
  "fixed-price-sale/cli",
  "token-metadata",
  "auction-house/program"
]
