[workspace]
[package]
name = "mpl-candy-machine"
version = "4.0.1"
description = "NFT Candy Machine v2: programmatic and trustless NFT drops."
authors = ["Jordan Prince", "Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/metaplex-program-library"
license = "AGPL-3.0"
edition = "2018"
readme = "README.md"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
test-bpf = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {git = "https://github.com/dedmonkes/anchor"}
arrayref = "0.3.6"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
mpl-token-metadata = { version = "1.3.1", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.0.3", features = [
  "no-entrypoint",
] }
anchor-spl = {git = "https://github.com/dedmonkes/anchor"}
solana-program = "1.10.19"
solana-gateway = "0.2.0"

[dev-dependencies]
solana-program-test = "1.10.19"
solana-sdk = "~1.10.19"
anchor-client = "0.24.2"
borsh = "~0.9.2"
